--- a/about.html
+++ b/about.html
@@ -56,38 +56,38 @@ h1{
     </nav>
 <div class="container">
     <div class="gallery">
-        <img src="C:\Users\User\source\repos\Shn Thant\love\photo_2023-01-18_15-04-24.jpg">
+        <img src="love\photo_2023-01-18_15-04-24.jpg">
         <div class ="des"> add a des</div>
         </div>
 </div>
         <div class="container">
             <div class="gallery">
-            <img src="C:\Users\User\source\repos\Shn Thant\love\photo_2023-01-20_20-51-06.jpg">
+            <img src="love\photo_2023-01-20_20-51-06.jpg">
             <div class ="des">add a des</div>
             </div>
         </div>
         <div class="container">
             <div class="gallery">
 
-                <img src="C:\Users\User\source\repos\Shn Thant\love\photo_2023-01-22_15-14-40.jpg">
+                <img src="love\photo_2023-01-22_15-14-40.jpg">
                 <div class ="des">add a des</div>
                 </div>
             </div>
             <div class="container">
                 <div class="gallery">
-                    <img src="C:\Users\User\source\repos\Shn Thant\love\photo_2023-01-23_08-35-25.jpg">
+                    <img src="love\photo_2023-01-23_08-35-25.jpg">
                     <div class ="des">add a des</div>
                     </div>
             </div>
                     <div class="container">
                         <div class="gallery">
-                        <img src="C:\Users\User\source\repos\Shn Thant\love\photo_2023-01-23_08-50-47.jpg">
+                        <img src="love\photo_2023-01-23_08-50-47.jpg">
                         <div class ="des">add a des</div>
                         </div>
                     </div>
                         <div class="container">
                             <div class="gallery">
-                            <img src="C:\Users\User\source\repos\Shn Thant\love\photo_2023-01-23_08-57-36.jpg">
+                            <img src="love\photo_2023-01-23_08-57-36.jpg">
                             <div class ="des" font color ="white">my love</div>
                             </div>
                         </div>
