--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
     <html lang>
        <head>
 
-        <h1>welcome to memories</h1>
+        <h1>Welcome to photos</h1>
     </head>
     <style type="text/css">
         *{
@@ -21,6 +21,7 @@ h1{
     margin:0;
     padding: 0;
     text-align: center;
+    font-style: italic;
 }
 h1{
     color: aliceblue;
@@ -44,6 +45,10 @@ h1{
         padding: 15px;
         text-align: center;
         
+     }
+     a{
+        color: aliceblue;
+        font: size 100px;
      }
     </style>
     <body>
