--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@ h1{
      }
      a{
         color: aliceblue;
-        font: size 100px;
+        font: size larger;
      }
     </style>
     <body>
