--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@ h1{
 }
 h1{
     color: aliceblue;
+    font-size: 5em;
 }
  .container{
     max-width: 2000px;
@@ -48,7 +49,6 @@ h1{
      }
      a{
         color: aliceblue;
-        font: size larger;
      }
     </style>
     <body>
